=head1 NAME

ReleaseNotes - These are the Release Notes for 1.19

=head1 SYNOPSIS

These are the major changes since version 1.18.

=head1 DESCRIPTION

I have done more refactoring and wrote some new code and documentation
since v1.18.

Major changes since 1.18

=over 4

=item 1

I finally got around to rewriting F<mkovz.pl> and replaced it with
L<Test::Smoke::Reporter> and decided to use <mailrpt.pl> as the new
front-end.

=item 2

The new reports have better hardware detection, with many thanks to
Merijn Brand (most osses), Campo Weijerman (AIX), Allen Smith (IRIX),
Alan Burlison (Solaris).

The compiler info is now logged after each Configure, so this is will be
available in reports even though the last Configure failed.

=item 3

After "many" requests, the old stuff (F<mktest.pl>, F<mkovz.pl> etc)
is now B<gone> (although I had planned the 1.20)!

=item 4

F<smokestatus.pl> tries to give a better guesstimate for ETA. It also
has the new C<--matrix> option to also show the smoke-matrix with the
status report.

=back

=head1 REVISION

$Id$

=head1 COPYRIGHT

(c) 2002-2003, All rights reserved.

  * Abe Timmerman <abeltje@cpan.org>

This library is free software; you can redistribute it and/or modify
it under the same terms as Perl itself.

See:

=over 4

=item * L<http://www.perl.com/perl/misc/Artistic.html>

=item * L<http://www.gnu.org/copyleft/gpl.html>

=back

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

=cut